--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "request": "^2.88.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "zipcodes": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
