--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
